RF_13.006.02 | User > Verify sorting by User ID > POM (#1290)